# apple-feed-notifier

./: .gitignore  README.md  feed_notify.py  notification_maker.py  notifier.py  options.py  pyproject.toml  rss_parser.py  run.py
